--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,16 +1,12 @@
 .footer {
     background: $color-black;
-    display: flex;
+    @include childCenter;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-top: 1px dashed $color-brown;
 
     .footer-container {
-        display: flex;
+        @include childCenter;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
 
         @media screen and (min-width: 1000px){
             display: flex;
@@ -47,10 +43,8 @@
     }
 
     .social {
-        display: flex;
+        @include childCenter;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
         margin-bottom: 30px;
 
         @media screen and (min-width: 1000px){
