--- a/src/styles/components/_hamburgerMenu.scss
+++ b/src/styles/components/_hamburgerMenu.scss
@@ -1,8 +1,6 @@
 .hamburger-menu {
-    display: flex;
+    @include childCenter;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     cursor: pointer;
     width: 25px;
     height: 15px;
@@ -74,6 +72,11 @@
         flex-direction: column;
         position: absolute;
         right: 25px;
+
+        @media screen and (min-width: 1000px){
+            opacity: 0;
+            visibility: hidden;
+        }
       }
 
       li {
@@ -91,9 +94,7 @@
       @media screen and (min-width: 1000px) {
         opacity: 1;
         visibility: visible;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include childCenter;
 
         li {
           margin: 0 20px;
