--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -23,10 +23,8 @@
 .header-text {
     width: 90%;
     height: 100%;
-    display: flex;
+    @include childCenter;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin: 0 auto;
 
     h1, h6 {
