--- a/src/styles/pages/_cardMenu.scss
+++ b/src/styles/pages/_cardMenu.scss
@@ -1,21 +1,104 @@
 .cardMenu {
-    display: flex;
+    @include childCenter;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 80%;
+    margin: 0 auto;
 
-    p {
+    h1 {
+        font-family: $font-1;
+        color: $color-orange;
+        font-size: 2.7rem;
         text-align: center;
-        margin-bottom: 20px;
-        color: $color-yellow;
+        margin: 20px 0;
     }
+    h4 {
+        color: $color-white;
+        margin: 20px 0;
+        text-align: center;
+    }
+
+    h3 {
+        color: $color-yellow;
+        margin: 20px 0;
+        text-align: center;
+        font-size: 2rem;
+    }
+
+    .déjeuner {
+        @include childCenter;
+        flex-direction: column;
+        margin-bottom: 50px; 
+    }
+
+    h2 {
+        font-family: $font-1;
+        color: $color-orange;
+        border-bottom: 1px solid $color-yellow;
+        font-size: 2.2rem;
+        font-weight: lighter;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    .entrées, .plats, .désserts {
+        display: flex;
+        flex-direction: column;        
+
+        h5 {
+            font-family: $font2;
+            color: $color-orange;
+            font-weight: lighter;
+            font-size: 1.2rem;
+        }
+
+        p {
+            color: $color-white;
+            margin-left: 20px;
+        }
+    }
+
+    .repas {
+        @include childCenter;
+        flex-direction: column;
+        margin-bottom: 50px;
+        
+        .diner {
+            display: flex;
+            justify-content: space-between;
+
+            h6 {
+                color: $color-yellow;
+            }
+        }
+    }
+
+    
 
     button {
         cursor: pointer;
         border: 1px solid $color-yellow;
         border-radius: 10px;
         padding: 10px;
-        margin-bottom: 20px;
+        margin: 20px 0;
         color: $color-orange;
+    }
+
+    .top {
+        position: relative;
+        
+        i {
+          width: 50px;
+          height: 50px;
+          font-size: 1.2rem;
+          border: 1px solid $color-orange;
+          border-radius: 50px;
+          color: $color-orange;
+          position: fixed;
+          bottom: 20px;
+          right: 10px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
     }
 }
