--- a/src/styles/pages/_cardMenu.scss
+++ b/src/styles/pages/_cardMenu.scss
@@ -1,8 +1,14 @@
 .cardMenu {
     @include childCenter;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
+    border: 1px dashed $color-brown;
+    background: $color-white;
+
+    @media screen and (min-width: 1000px){
+        width: 50%;
+    }
 
     h1 {
         font-family: $font-1;
@@ -12,7 +18,7 @@
         margin: 20px 0;
     }
     h4 {
-        color: $color-white;
+        color: $color-black;
         margin: 20px 0;
         text-align: center;
     }
@@ -28,6 +34,7 @@
         @include childCenter;
         flex-direction: column;
         margin-bottom: 50px; 
+        width: 90%;
     }
 
     h2 {
@@ -40,9 +47,39 @@
         margin-bottom: 30px;
     }
 
+    .center {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 90%; 
+        
+        @media screen and (min-width: 1000px){
+            width: 70%;
+        }
+
+        h5 {
+            font-family: $font2;
+            color: $color-orange;
+            font-weight: lighter;
+            font-size: 1.2rem;
+            margin-top: 20px;
+        }
+
+        p {
+            color: $color-black;
+            margin-left: 20px;
+        }
+
+    }
+
     .entrées, .plats, .désserts {
         display: flex;
-        flex-direction: column;        
+        flex-direction: column;
+        width: 90%; 
+        
+        @media screen and (min-width: 1000px){
+            width: 70%;
+        }
 
         h5 {
             font-family: $font2;
@@ -52,7 +89,7 @@
         }
 
         p {
-            color: $color-white;
+            color: $color-black;
             margin-left: 20px;
         }
     }
@@ -61,10 +98,12 @@
         @include childCenter;
         flex-direction: column;
         margin-bottom: 50px;
+        width: 100%;
         
         .diner {
             display: flex;
             justify-content: space-between;
+            align-items: center;
 
             h6 {
                 color: $color-yellow;
@@ -81,6 +120,12 @@
         padding: 10px;
         margin: 20px 0;
         color: $color-orange;
+
+        &:hover {
+            background: $color-white;
+            transform: scale(1.1);
+            transition: 0.8s;
+        }
     }
 
     .top {
