modal +maj burger

--- a/src/styles/components/_diner.scss
+++ b/src/styles/components/_diner.scss
@@ -82,6 +82,11 @@
             @media screen and (min-width: 1000px){
                 font-size: 1.3rem;
             }
+
+            &:hover {
+                transform: scale(1.1);
+                transition: 0.4s;
+            }
         }
     }   
 }
