--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -27,18 +27,29 @@
             width: 90%;
             margin: 20px auto;
 
-            @media screen and (min-width: 1000px){
-               
+            h2 {
+                font-family: $font-1;
+                font-size: 2.5rem;
+                font-weight: 200;
+                color: $color-orange;
+                text-align: center;
+                margin: 20px 0;
             }
-        }
 
-        h2 {
-            font-family: $font-1;
-            font-size: 2.5rem;
-            font-weight: 100;
-            color: $color-orange;
-            text-align: center;
-            margin: 30px 0;
+            .btn1, .btn2 {
+                color: $color-orange;
+                border: 1px solid $color-yellow;
+                border-radius: 10px;
+                cursor: pointer;
+                padding: 5px 10px;
+                letter-spacing: 1px;
+                font-size: 1rem;
+                margin-bottom: 15px;
+
+                @media screen and (min-width: 1000px){
+                    font-size: 1.2rem;
+                }
+            }            
         }
       
         h3 {
@@ -71,14 +82,13 @@
             }
         }
       
-        button {
-            border: none;
-            border-radius: 50px;
-            background: $color-black;
+        .btnReservation {
+            border: 1px solid $color-yellow;
+            border-radius: 10px;
             color: $color-orange;
-            padding: 10px 28px;
-            letter-spacing: 4px;
-            font-weight: 700;
+            padding: 5px 10px;
+            font-size: 1rem;
+            letter-spacing: 1px;
             cursor: pointer;
             transition: 0.2s;
             margin-bottom: 30px;
@@ -86,11 +96,13 @@
             @media screen and (min-width: 1000px){
                 margin: 20px;
                 margin-bottom: 35px;
+                font-size: 1.2rem;
             }
       
             &:hover {
-              transform: scale(1.1);
-              transition: 0.4s;
+                background: $color-white;
+                transform: scale(1.1);
+                transition: 0.4s;
             }
         }
     }  
