--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -93,6 +93,7 @@
             border-radius: 10px;
             padding: 10px;
             margin-bottom: 20px;
+            letter-spacing: 2px;
             color: $color-orange;
     
             @media screen and (min-width: 680px){
@@ -101,6 +102,11 @@
 
             @media screen and (min-width: 1000px){
                 font-size: 1.3rem;
+            }
+
+            &:hover {
+                transform: scale(1.1);
+                transition: 0.4s;
             }
         }
     }
