--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,3 +13,5 @@
 @import "./components/timeOpen";
 @import "./components/form";
 @import "./components/footer";
+@import "./components/modalLogin";
+@import "./components/modalRegister";
