--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -49,6 +49,12 @@
                 @media screen and (min-width: 1000px){
                     font-size: 1.2rem;
                 }
+
+                &:hover {
+                    transform: scale(1.1);
+                    transition: 0.8s;
+                    background: $color-white;
+                }
             }            
         }
       
