--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -24,7 +24,7 @@
             }
 
             &:hover {
-                color: $color-yellow;
+                color: $color-orange;
                 transform: scale(1.1);
             }
         }
