--- a/src/styles/components/_lunch.scss
+++ b/src/styles/components/_lunch.scss
@@ -105,6 +105,7 @@
             }
 
             &:hover {
+                background: $color-white;
                 transform: scale(1.1);
                 transition: 0.4s;
             }
