--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -86,31 +86,36 @@
               border: none;
               border-bottom: 1px solid $color-black;
             }
-        }
-      
-        .btnReservation {
-            border: 1px solid $color-yellow;
-            border-radius: 10px;
-            color: $color-orange;
-            padding: 5px 10px;
-            font-size: 1rem;
-            letter-spacing: 1px;
-            cursor: pointer;
-            transition: 0.2s;
-            margin-bottom: 30px;
 
-            @media screen and (min-width: 1000px){
-                margin: 20px;
-                margin-bottom: 35px;
-                font-size: 1.2rem;
+            .btnReservation {
+                border: 1px solid $color-yellow;
+                border-radius: 10px;
+                color: $color-orange;
+                padding: 5px 10px;
+                font-size: 1rem;
+                letter-spacing: 1px;
+                cursor: pointer;
+                transition: 0.2s;
+                margin-bottom: 30px;
+
+                @media screen and (min-width: 620px){
+                    margin-top: 30px;
+                }
+    
+                @media screen and (min-width: 1000px){
+                    margin: 20px;
+                    margin-top: 30px;
+                    margin-bottom: 35px;
+                    font-size: 1.2rem;
+                }
+          
+                &:hover {
+                    background: $color-white;
+                    transform: scale(1.1);
+                    transition: 0.4s;
+                }
             }
-      
-            &:hover {
-                background: $color-white;
-                transform: scale(1.1);
-                transition: 0.4s;
-            }
-        }
+        }     
     }  
 }
   
