--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,69 @@ body {
   height: 100vh;
   background: url(../../img/bg.jpg) center/cover;
 }
+.header .loginRegister {
+  position: relative;
+  z-index: 11;
+}
+.header .loginRegister .btn1, .header .loginRegister .btn2 {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.548);
+  border: 1px solid #F6AA1C;
+  border-radius: 0 20px 20px 0;
+  margin-top: 10px;
+  padding: 10px 30px;
+  color: rgb(243, 226, 221);
+  font-family: "font-roboto", serif;
+  font-size: 1rem;
+  cursor: pointer;
+}
+@media screen and (min-width: 1000px) {
+  .header .loginRegister .btn1, .header .loginRegister .btn2 {
+    font-size: 1.2rem;
+  }
+}
+.header .loginRegister .btn1:hover, .header .loginRegister .btn2:hover {
+  color: #BC3908;
+  transform: scale(1.1);
+}
+.header .loginRegister .btn1 {
+  top: 75px;
+  left: -130px;
+}
+@media screen and (min-width: 1000px) {
+  .header .loginRegister .btn1 {
+    left: -10px;
+  }
+}
+.header .loginRegister .btn1:hover {
+  transform: translateX(120px);
+  transition: 1s;
+}
+@media screen and (min-width: 1000px) {
+  .header .loginRegister .btn1:hover {
+    transform: translateX(0);
+    transform: scale(1.1);
+  }
+}
+.header .loginRegister .btn2 {
+  top: 130px;
+  left: -150px;
+}
+@media screen and (min-width: 1000px) {
+  .header .loginRegister .btn2 {
+    left: -10px;
+  }
+}
+.header .loginRegister .btn2:hover {
+  transform: translateX(130px);
+  transition: 1s;
+}
+@media screen and (min-width: 1000px) {
+  .header .loginRegister .btn2:hover {
+    transform: translateX(0);
+    transform: scale(1.1);
+  }
+}
 .header nav {
   width: 100%;
   display: flex;
@@ -46,7 +109,7 @@ body {
   top: 0;
   background: rgba(0, 0, 0, 0.548);
   margin: 0 auto;
-  z-index: 100;
+  z-index: 10;
 }
 
 .header-text {
@@ -108,6 +171,7 @@ h6 {
 @media screen and (min-width: 1000px) {
   .hamburger-menu {
     width: 80%;
+    flex-direction: row;
   }
 }
 .hamburger-menu .line {
@@ -155,7 +219,7 @@ h6 {
 .hamburger-menu.open ul {
   opacity: 1;
   visibility: visible;
-  transform: translateY(63%);
+  transform: translateY(68%);
   transition: transform 1.2s ease;
   background: rgba(0, 0, 0, 0.548);
   display: flex;
@@ -168,10 +232,6 @@ h6 {
     opacity: 0;
     visibility: hidden;
   }
-}
-.hamburger-menu.open ul .modalVisible {
-  visibility: visible;
-  z-index: 2;
 }
 .hamburger-menu.open li {
   text-align: center;
@@ -200,16 +260,6 @@ h6 {
   font-family: "font-roboto", serif;
 }
 .hamburger-menu a:hover {
-  color: #F6AA1C;
-}
-.hamburger-menu button {
-  color: rgb(243, 226, 221);
-  font-family: "font-roboto", serif;
-  background: transparent;
-  font-size: 1rem;
-  cursor: pointer;
-}
-.hamburger-menu button:hover {
   color: #F6AA1C;
 }
 
@@ -467,6 +517,7 @@ h6 {
   border-radius: 10px;
   padding: 10px;
   margin-bottom: 20px;
+  letter-spacing: 2px;
   color: #BC3908;
 }
 @media screen and (min-width: 680px) {
@@ -478,6 +529,11 @@ h6 {
   .lunchCard .borderLunch button {
     font-size: 1.3rem;
   }
+}
+.lunchCard .borderLunch button:hover {
+  background: rgb(243, 226, 221);
+  transform: scale(1.1);
+  transition: 0.4s;
 }
 
 .dinerCard {
@@ -567,6 +623,10 @@ h6 {
   .dinerCard .borderDiner button {
     font-size: 1.3rem;
   }
+}
+.dinerCard .borderDiner button:hover {
+  transform: scale(1.1);
+  transition: 0.4s;
 }
 
 .drinksCard {
@@ -740,54 +800,57 @@ h6 {
   margin-bottom: 50px;
   width: 90%;
 }
-.cardMenu h2 {
-  font-family: "font-Allura", sans-serif;
-  color: #BC3908;
-  border-bottom: 1px solid #F6AA1C;
-  font-size: 2.2rem;
-  font-weight: lighter;
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-.cardMenu .center {
+.cardMenu .déjeuner .center {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   text-align: center;
   width: 90%;
 }
 @media screen and (min-width: 1000px) {
-  .cardMenu .center {
+  .cardMenu .déjeuner .center {
     width: 70%;
   }
 }
-.cardMenu .center h5 {
+.cardMenu .déjeuner .center h2 {
+  font-family: "font-Allura", sans-serif;
+  color: #BC3908;
+  border-bottom: 1px solid #F6AA1C;
+  font-size: 2.2rem;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  text-align: center;
+}
+.cardMenu .déjeuner .center h5 {
   font-family: "font-roboto", serif;
   color: #BC3908;
   font-weight: lighter;
   font-size: 1.2rem;
   margin-top: 20px;
 }
-.cardMenu .center p {
+.cardMenu .déjeuner .center p {
   color: #21201e;
   margin-left: 20px;
 }
-.cardMenu .entrées, .cardMenu .plats, .cardMenu .désserts {
+.cardMenu .entrées, .cardMenu .plats, .cardMenu .desserts {
   display: flex;
   flex-direction: column;
   width: 90%;
 }
 @media screen and (min-width: 1000px) {
-  .cardMenu .entrées, .cardMenu .plats, .cardMenu .désserts {
+  .cardMenu .entrées, .cardMenu .plats, .cardMenu .desserts {
     width: 70%;
   }
 }
-.cardMenu .entrées h5, .cardMenu .plats h5, .cardMenu .désserts h5 {
+.cardMenu .entrées h5, .cardMenu .plats h5, .cardMenu .desserts h5 {
   font-family: "font-roboto", serif;
   color: #BC3908;
   font-weight: lighter;
   font-size: 1.2rem;
 }
-.cardMenu .entrées p, .cardMenu .plats p, .cardMenu .désserts p {
+.cardMenu .entrées p, .cardMenu .plats p, .cardMenu .desserts p {
   color: #21201e;
   margin-left: 20px;
 }
@@ -940,13 +1003,33 @@ h6 {
   width: 90%;
   margin: 20px auto;
 }
-.form-infos .form-infos-container h2 {
+.form-infos .form-infos-container .borderForm h2 {
   font-family: "font-Allura", sans-serif;
   font-size: 2.5rem;
-  font-weight: 100;
+  font-weight: 200;
   color: #BC3908;
   text-align: center;
-  margin: 30px 0;
+  margin: 20px 0;
+}
+.form-infos .form-infos-container .borderForm .btn1, .form-infos .form-infos-container .borderForm .btn2 {
+  color: #BC3908;
+  border: 1px solid #F6AA1C;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 5px 10px;
+  letter-spacing: 1px;
+  font-size: 1rem;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1000px) {
+  .form-infos .form-infos-container .borderForm .btn1, .form-infos .form-infos-container .borderForm .btn2 {
+    font-size: 1.2rem;
+  }
+}
+.form-infos .form-infos-container .borderForm .btn1:hover, .form-infos .form-infos-container .borderForm .btn2:hover {
+  transform: scale(1.1);
+  transition: 0.8s;
+  background: rgb(243, 226, 221);
 }
 .form-infos .form-infos-container h3 {
   color: #21201e;
@@ -975,25 +1058,32 @@ h6 {
   border: none;
   border-bottom: 1px solid #21201e;
 }
-.form-infos .form-infos-container button {
-  border: none;
-  border-radius: 50px;
-  background: #21201e;
+.form-infos .form-infos-container .form-inputs .btnReservation {
+  border: 1px solid #F6AA1C;
+  border-radius: 10px;
   color: #BC3908;
-  padding: 10px 28px;
-  letter-spacing: 4px;
-  font-weight: 700;
+  padding: 5px 10px;
+  font-size: 1rem;
+  letter-spacing: 1px;
   cursor: pointer;
   transition: 0.2s;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 1000px) {
-  .form-infos .form-infos-container button {
-    margin: 20px;
-    margin-bottom: 35px;
+@media screen and (min-width: 620px) {
+  .form-infos .form-infos-container .form-inputs .btnReservation {
+    margin-top: 30px;
   }
 }
-.form-infos .form-infos-container button:hover {
+@media screen and (min-width: 1000px) {
+  .form-infos .form-infos-container .form-inputs .btnReservation {
+    margin: 20px;
+    margin-top: 30px;
+    margin-bottom: 35px;
+    font-size: 1.2rem;
+  }
+}
+.form-infos .form-infos-container .form-inputs .btnReservation:hover {
+  background: rgb(243, 226, 221);
   transform: scale(1.1);
   transition: 0.4s;
 }
@@ -1094,9 +1184,26 @@ h6 {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 .modal-content .close-button {
-  color: #621708;
   margin-bottom: 20px;
-  font-size: 1.3rem;
+}
+.modal-content button {
+  color: #BC3908;
+  padding: 5px 10px;
+  border: 1px solid #F6AA1C;
+  border-radius: 10px;
+  cursor: pointer;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+}
+@media screen and (min-width: 1000px) {
+  .modal-content button {
+    font-size: 1.4rem;
+  }
+}
+.modal-content button:hover {
+  background: rgb(243, 226, 221);
+  transform: scale(1.1);
+  transition: 0.8s;
 }
 .modal-content form {
   display: flex;
@@ -1113,15 +1220,6 @@ h6 {
 }
 .modal-content form button {
   margin-top: 10px;
-  padding: 10px 15px;
-  background-color: #621708;
-  color: #F6AA1C;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.modal-content form button:hover {
-  background-color: #21201e;
 }
 
 .modalRegister {
@@ -1142,13 +1240,32 @@ h6 {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 .modalRegister-content .close-button {
-  color: #621708;
   margin-bottom: 20px;
+}
+.modalRegister-content button {
+  padding: 5px 10px;
+  color: #BC3908;
+  border: 1px solid #F6AA1C;
+  border-radius: 10px;
+  cursor: pointer;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+}
+@media screen and (min-width: 1000px) {
+  .modalRegister-content button {
+    font-size: 1.4rem;
+  }
+}
+.modalRegister-content button:hover {
+  background-color: rgb(243, 226, 221);
+  transform: scale(1.1);
+  transition: 0.8s;
 }
 .modalRegister-content h2 {
   color: #BC3908;
   font-family: "font-Allura", sans-serif;
   font-size: 2rem;
+  font-weight: 200;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -1159,7 +1276,7 @@ h6 {
 }
 .modalRegister-content form input {
   margin-bottom: 10px;
-  padding: 5px;
+  padding: 10px;
   width: 100%;
   border-radius: 3px;
   border: none;
@@ -1167,13 +1284,4 @@ h6 {
 }
 .modalRegister-content form button {
   margin-top: 10px;
-  padding: 5px 10px;
-  background-color: #621708;
-  color: #F6AA1C;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-.modalRegister-content form button:hover {
-  background-color: #21201e;
 }/*# sourceMappingURL=index.css.map */
