--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,4 @@
 @import "./components/footer";
 @import "./components/modalLogin";
 @import "./components/modalRegister";
+@import "./pages/adminPage";
