route register et modal error

--- a/src/styles/components/_hamburgerMenu.scss
+++ b/src/styles/components/_hamburgerMenu.scss
@@ -118,6 +118,7 @@
       background: rgba(0, 0, 0, 0.548);
       font-size: 1rem;
       cursor: pointer;
+      visibility: hidden;
 
       &:hover {
         color: $color-yellow;
