--- a/src/styles/components/_modalLogin.scss
+++ b/src/styles/components/_modalLogin.scss
@@ -5,10 +5,9 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
+    @include childCenter;
+    flex-direction: column;
+      
     &-content {
       background-color: $color-white;
       padding: 20px;
