--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,4 +15,5 @@
 @import "./components/footer";
 @import "./components/modalLogin";
 @import "./components/modalRegister";
+@import "./components/errorModal";
 @import "./pages/adminPage";
