--- a/src/styles/components/_brouillon.scss
+++ b/src/styles/components/_brouillon.scss
@@ -1,152 +1,14 @@
-.cardMenu {
-    @include childCenter;
-    flex-direction: column;
-    width: 90%;
-    margin: 0 auto;
-    border: 1px dashed $color-brown;
-    background: $color-white;
+.brouillon {
+    position: fixed;
+    top: 8vh;
+    right: 10px;
 
-    @media screen and (min-width: 1000px){
-        width: 50%;
-    }
-
-    h1 {
-        font-family: $font-1;
-        color: $color-orange;
-        font-size: 2.7rem;
-        text-align: center;
-        margin: 20px 0;
-    }
-    h4 {
-        color: $color-black;
-        margin: 20px 0;
-        text-align: center;
-    }
-
-    h3 {
+    p {
         color: $color-yellow;
-        margin: 20px 0;
-        text-align: center;
-        font-size: 2rem;
     }
+}
 
-    .déjeuner {
-        @include childCenter;
-        flex-direction: column;
-        margin-bottom: 50px; 
-        width: 90%;
-    }
 
-    h2 {
-        font-family: $font-1;
-        color: $color-orange;
-        border-bottom: 1px solid $color-yellow;
-        font-size: 2.2rem;
-        font-weight: lighter;
-        margin-top: 20px;
-        margin-bottom: 30px;
-        text-align: center;
-    }
-
-    .center {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        width: 90%; 
-        
-        @media screen and (min-width: 1000px){
-            width: 70%;
-        }
-
-        h5 {
-            font-family: $font2;
-            color: $color-orange;
-            font-weight: lighter;
-            font-size: 1.2rem;
-            margin-top: 20px;
-        }
-
-        p {
-            color: $color-black;
-            margin-left: 20px;
-        }
-
-    }
-
-    .entrées, .plats, .desserts {
-        display: flex;
-        flex-direction: column;
-        width: 90%; 
-        
-        @media screen and (min-width: 1000px){
-            width: 70%;
-        }
-
-        h5 {
-            font-family: $font2;
-            color: $color-orange;
-            font-weight: lighter;
-            font-size: 1.2rem;
-        }
-
-        p {
-            color: $color-black;
-            margin-left: 20px;
-        }
-    }
-
-    .repas {
-        @include childCenter;
-        flex-direction: column;
-        margin-bottom: 50px;
-        width: 100%;
-        
-        .diner {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            h6 {
-                color: $color-yellow;
-            }
-        }
-    }
-
-    .hours {
-        width: 90%;
-    }
-
-    button {
-        cursor: pointer;
-        border: 1px solid $color-yellow;
-        border-radius: 10px;
-        padding: 10px;
-        margin: 20px 0;
-        color: $color-orange;
-
-        &:hover {
-            background: $color-white;
-            transform: scale(1.1);
-            transition: 0.8s;
-        }
-    }
-
-    .top {
-        position: relative;
-        
-        i {
-          width: 50px;
-          height: 50px;
-          font-size: 1.2rem;
-          border: 1px solid $color-orange;
-          border-radius: 50px;
-          color: $color-orange;
-          position: fixed;
-          bottom: 20px;
-          right: 10px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-    }
+button {
+    color: $color-orange;
 }
