--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,3 +17,4 @@
 @import "./components/modalRegister";
 @import "./components/errorModal";
 @import "./pages/adminPage";
+@import "./components/brouillon";
