--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,7 +7,7 @@
         position: relative;
         z-index: 11;
         
-        .btn1, .btn2 {
+        .btn1, .btn2, .btn3 {
             position: fixed;
             background: rgba(0, 0, 0, 0.548);
             border: 1px solid $color-yellow; 
@@ -52,6 +52,25 @@
         .btn2 {    
             top: 130px;
             left: -150px;
+
+            @media screen and (min-width: 1000px){
+                left: -10px;
+            }
+
+            &:hover {
+                transform: translateX(130px);
+                transition: 1s;
+
+                @media screen and (min-width: 1000px){
+                    transform: translateX(0);
+                    transform: scale(1.1);
+                }
+            }
+        }
+
+        .btn3 {    
+            top: 130px;
+            left: -140px;
 
             @media screen and (min-width: 1000px){
                 left: -10px;
