--- a/src/styles/components/_modalLogin.scss
+++ b/src/styles/components/_modalLogin.scss
@@ -14,6 +14,11 @@
       border-radius: 5px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 
+      p {
+        text-align: center;
+        color: $color-orange;
+      }
+
       .close-button {
         margin-bottom: 20px;
       }
