--- a/src/styles/pages/_adminPage.scss
+++ b/src/styles/pages/_adminPage.scss
@@ -40,6 +40,13 @@
             padding: 10px;
         }
 
+        p {
+            color: $color-orange;
+            background: $color-white;
+            width: 150px;
+            text-align: center;
+        }
+
         input {
             padding: 5px;
             margin: 10px;
