--- a/src/styles/components/_modalLogin.scss
+++ b/src/styles/components/_modalLogin.scss
@@ -55,6 +55,7 @@
           border-radius: 3px;
           border: none;
           box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+          font-size: 1.1rem;
         }
         
         button {
