--- a/src/styles/pages/_adminPage.scss
+++ b/src/styles/pages/_adminPage.scss
@@ -43,7 +43,7 @@
         p {
             color: $color-orange;
             background: $color-white;
-            width: 150px;
+            padding: 10px 15px;
             text-align: center;
         }
 
