--- a/src/styles/components/_confirmSupp.scss
+++ b/src/styles/components/_confirmSupp.scss
@@ -8,28 +8,37 @@
     @include childCenter;
     flex-direction: column;
 
-    p {
-        text-align: center;
-        color: $color-orange;
+    &-content {
+        background-color: $color-white;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+
+        p {
+            text-align: center;
+            color: $color-orange;
+        }
+    
+        button {
+            color: $color-orange;
+            padding: 5px 10px;
+            border: 1px solid $color-yellow;
+            border-radius: 10px;
+            cursor: pointer;
+            letter-spacing: 1px;
+            font-size: 1.2rem;
+    
+            @media screen and (min-width: 1000px){
+              font-size: 1.4rem;
+            }
+    
+            &:hover {
+              background: $color-white;
+              transform: scale(1.1);
+              transition: 0.8s;
+            }
+        }
     }
 
-    button {
-        color: $color-orange;
-        padding: 5px 10px;
-        border: 1px solid $color-yellow;
-        border-radius: 10px;
-        cursor: pointer;
-        letter-spacing: 1px;
-        font-size: 1.2rem;
-
-        @media screen and (min-width: 1000px){
-          font-size: 1.4rem;
-        }
-
-        &:hover {
-          background: $color-white;
-          transform: scale(1.1);
-          transition: 0.8s;
-        }
-    }
+    
 }
