--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,3 +18,4 @@
 @import "./components/errorModal";
 @import "./pages/adminPage";
 @import "./components/userAccount";
+@import "./components/confirmSupp";
