admin hours and menu

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,3 +19,5 @@
 @import "./pages/adminPage";
 @import "./components/userAccount";
 @import "./components/confirmSupp";
+@import "./components/adminMenu";
+@import "./components/adminHours";
